--- a/app/src/main/res/layout/fragment_places_rv_item.xml
+++ b/app/src/main/res/layout/fragment_places_rv_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Last modified 09.12.19 20:46
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -18,7 +18,7 @@
 		<import type="android.view.View"/>
 		<variable
 			name="eventItem"
-			type="com.mmdev.business.events.model.EventItem" />
+			type="com.mmdev.business.events.entity.EventItem" />
 
 	</data>
 
