--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 08.12.19 16:26
+  ~ Last modified 09.12.19 19:17
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -166,6 +166,14 @@
 		<item name="android:fontFamily">@font/rubik_medium</item>
 		<item name="android:textColor">@color/white</item>
 		<item name="android:textSize">@dimen/auth_tv_slogan2</item>
+	</style>
+
+	<!-- registration gender tabs text -->
+	<style name="registration_tab_text_24sp" parent="TextAppearance.Design.Tab">
+		<item name="android:fontFamily">@font/rubik_light</item>
+		<item name="textAllCaps">false</item>
+		<item name="android:textColor">@color/white_10</item>
+		<item name="android:textSize">24sp</item>
 	</style>
 
 	<!-- unfocused tabs text -->
