--- a/app/src/main/res/layout/fragment_auth_registration.xml
+++ b/app/src/main/res/layout/fragment_auth_registration.xml
@@ -2,181 +2,216 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 09.12.19 21:38
+  ~ Last modified 10.12.19 22:08
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
-<androidx.cardview.widget.CardView
+<androidx.constraintlayout.motion.widget.MotionLayout
+	android:id="@+id/containerRegistration"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	app:contentPadding="20dp"
-	app:cardBackgroundColor="@color/colorPrimary"
-	app:cardCornerRadius="20dp"
+	android:padding="@dimen/general_margin_8"
+	android:background="@color/colorPrimaryDark"
+	app:layoutDescription="@xml/motion_registration"
+
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
-	<androidx.constraintlayout.widget.ConstraintLayout
-		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+	<TextView
+		android:id="@+id/tv_reg_1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:lines="2"
 
-		<TextView
-			android:id="@+id/tv_reg_1"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="I'm a..."
+		android:text="Select your\ngender"
+		android:textSize="40sp"
+		style="@style/medium_text_white_28sp_85op"
 
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintBottom_toTopOf="@id/cardContainerRegistrationYourGender"
-
-			style="@style/regular_text_white_24sp_85op" />
-
-		<com.google.android.material.card.MaterialCardView
-			android:id="@+id/cardContainerRegistrationYourGender"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-
-			app:cardCornerRadius="8dp"
-			app:cardBackgroundColor="@color/white"
-			app:contentPadding="3dp"
-
-			app:strokeWidth="3dp"
-			app:strokeColor="@color/material_blue_400"
-
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/tv_reg_1"
-			app:layout_constraintBottom_toTopOf="@id/tv_reg_2">
-
-				<com.google.android.material.tabs.TabLayout
-					android:id="@+id/tlRegistrationYourGender"
-					android:layout_width="match_parent"
-					android:layout_height="match_parent"
-					android:background="@color/white"
-					android:overScrollMode="never"
-
-					app:tabIconTint="@null"
-					app:tabIndicatorColor="@color/material_blue_400"
-					app:tabIndicatorGravity="stretch"
-					app:tabInlineLabel="true"
-
-					app:tabMode="fixed"
-
-					app:tabRippleColor="@color/material_blue_400"
-					app:tabSelectedTextColor="@color/black"
-					app:tabTextColor="@color/black_50"
-					app:tabTextAppearance="@style/registration_tab_text_24sp">
-
-					<com.google.android.material.tabs.TabItem
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="Male" />
-
-					<com.google.android.material.tabs.TabItem
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="Female" />
-
-				</com.google.android.material.tabs.TabLayout>
-
-		</com.google.android.material.card.MaterialCardView>
-
-		<TextView
-			android:id="@+id/tv_reg_2"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="Interested in meeting with..."
-
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/cardContainerRegistrationYourGender"
-			app:layout_constraintBottom_toTopOf="@id/cardContainerRegistrationPreferredGender"
-
-			style="@style/regular_text_white_24sp_85op" />
-
-		<com.google.android.material.card.MaterialCardView
-			android:id="@+id/cardContainerRegistrationPreferredGender"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-
-			app:cardCornerRadius="8dp"
-			app:cardBackgroundColor="@color/white"
-			app:contentPadding="3dp"
-
-			app:strokeWidth="3dp"
-			app:strokeColor="@color/material_orange_600"
-
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/tv_reg_2"
-			app:layout_constraintBottom_toTopOf="@id/btnRegistrationDone">
-
-			<com.google.android.material.tabs.TabLayout
-				android:id="@+id/tlRegistrationPreferredGender"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:background="@color/white"
-				android:overScrollMode="never"
-
-				app:tabIconTint="@null"
-				app:tabIndicatorColor="@color/material_orange_600"
-				app:tabIndicatorGravity="stretch"
-				app:tabInlineLabel="true"
-				app:tabMode="fixed"
-
-				app:tabRippleColor="@color/material_orange_600"
-				app:tabSelectedTextColor="@color/black"
-				app:tabTextColor="@color/black_50"
-				app:tabTextAppearance="@style/registration_tab_text_24sp">
-
-				<com.google.android.material.tabs.TabItem
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Male" />
-
-				<com.google.android.material.tabs.TabItem
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Female" />
-
-				<com.google.android.material.tabs.TabItem
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Both" />
-
-			</com.google.android.material.tabs.TabLayout>
-
-		</com.google.android.material.card.MaterialCardView>
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintVertical_bias="0.2"
+		app:layout_constraintHorizontal_bias="0.1"/>
 
 
-		<com.google.android.material.button.MaterialButton
-			android:id="@+id/btnRegistrationDone"
-			android:layout_height="wrap_content"
-			android:layout_width="wrap_content"
-			android:paddingStart="32dp"
-			android:paddingEnd="32dp"
+	<com.google.android.material.button.MaterialButton
+		android:id="@+id/btnGenderMale"
+		android:layout_width="0dp"
+		android:layout_height="180dp"
 
-			android:fontFamily="@font/rubik_medium"
-			android:textAllCaps="false"
-			android:textSize="18sp"
+		android:layout_marginEnd="@dimen/general_margin_8"
 
-			android:text="DONE!"
+		android:fontFamily="@font/rubik_medium"
+		android:text="male"
+		android:textSize="12sp"
 
-			app:backgroundTint="@color/material_blue_a700"
-			app:cornerRadius="8dp"
-			app:rippleColor="@color/black_50"
+		app:backgroundTint="@color/colorPrimary"
+		app:icon="@drawable/ic_registration_male_64dp"
+		app:iconGravity="textStart"
+		app:rippleColor="@color/black_50"
 
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/cardContainerRegistrationPreferredGender"
-			/>
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toStartOf="@id/btnGenderFemale"
+		app:layout_constraintTop_toBottomOf="@id/tv_reg_1"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintVertical_bias="0.3" />
+
+	<com.google.android.material.button.MaterialButton
+		android:id="@+id/btnGenderFemale"
+		android:layout_width="0dp"
+		android:layout_height="180dp"
+
+		android:fontFamily="@font/rubik_medium"
+		android:text="female"
+		android:textSize="12sp"
+
+		app:icon="@drawable/ic_registration_female_64dp"
+		app:iconGravity="textStart"
+		app:rippleColor="@color/black_50"
+
+		app:layout_constraintStart_toEndOf="@id/btnGenderMale"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/tv_reg_1"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintVertical_bias="0.3" />
+
+	<TextView
+		android:id="@+id/tv_reg_2"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+
+		android:layout_marginBottom="24dp"
+		android:text="Interested in"
+		android:textSize="40sp"
+		style="@style/medium_text_white_28sp_85op"
+
+		android:alpha="0"
+
+		app:layout_constraintBottom_toTopOf="@id/btnPrefGenderMale"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.1"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
 
-	</androidx.constraintlayout.widget.ConstraintLayout>
+	<com.google.android.material.button.MaterialButton
+		android:id="@+id/btnPrefGenderMale"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:layout_marginBottom="@dimen/general_margin_8"
 
-</androidx.cardview.widget.CardView>
+		android:fontFamily="@font/rubik_medium"
+		android:text="male"
+		android:textSize="20sp"
+
+		android:scaleX="0"
+		android:scaleY="0"
+		android:rotationY="-90"
+		android:rotationX="180"
+
+		app:backgroundTint="@color/colorPrimary"
+		app:icon="@drawable/ic_registration_male_64dp"
+		app:iconGravity="textStart"
+		app:layout_constraintBottom_toTopOf="@id/btnPrefGenderFemale"
+
+		app:layout_constraintEnd_toEndOf="parent"
+
+		app:layout_constraintTop_toBottomOf="@id/tv_reg_2"
+		app:rippleColor="@color/black_50" />
+
+	<com.google.android.material.button.MaterialButton
+		android:id="@+id/btnPrefGenderFemale"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:layout_marginBottom="@dimen/general_margin_8"
+
+		android:fontFamily="@font/rubik_medium"
+		android:text="female"
+		android:textSize="20sp"
+
+		android:scaleX="0"
+		android:scaleY="0"
+		android:rotationY="-90"
+		android:rotationX="180"
+
+		app:icon="@drawable/ic_registration_female_64dp"
+		app:iconGravity="textStart"
+		app:layout_constraintBottom_toTopOf="@id/btnPrefGenderEveryone"
+
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+
+		app:rippleColor="@color/black_50" />
+
+	<com.google.android.material.button.MaterialButton
+		android:id="@+id/btnPrefGenderEveryone"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:layout_marginBottom="24dp"
+
+		android:fontFamily="@font/rubik_medium"
+		android:text="Everyone"
+		android:textSize="20sp"
+
+		android:scaleX="0"
+		android:scaleY="0"
+		android:rotationY="-90"
+		android:rotationX="180"
+
+		app:icon="@drawable/ic_registration_heart_64"
+		app:iconGravity="textStart"
+		app:iconTint="@color/material_red_a700"
+
+		app:layout_constraintBottom_toTopOf="@id/btnRegistrationNext"
+
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/btnPrefGenderFemale"
+		app:rippleColor="@color/black_50" />
+
+
+	<com.google.android.material.button.MaterialButton
+		android:id="@+id/btnRegistrationBack"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="@dimen/general_margin_16"
+
+		android:fontFamily="@font/rubik_medium"
+		android:text="Back"
+		android:textAllCaps="false"
+		android:textColor="@color/white_50"
+		android:textSize="18sp"
+
+		style="@style/Widget.MaterialComponents.Button.TextButton"
+
+		app:cornerRadius="10dp"
+		app:icon="@drawable/ic_arrow_back_24dp"
+		app:iconTint="@color/white_50"
+		app:iconPadding="@dimen/general_margin_16"
+		app:rippleColor="@color/black"
+
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintHorizontal_bias="0.1" />
+
+
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/btnRegistrationNext"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="@dimen/general_margin_16"
+		android:src="@drawable/ic_arrow_forward_24dp"
+
+		app:backgroundTint="@color/gradient3"
+		app:rippleColor="@color/black_50"
+
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintHorizontal_bias="0.8" />
+
+</androidx.constraintlayout.motion.widget.MotionLayout>
