--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 20:40
+  ~ Last modified 10.12.19 16:26
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -53,6 +53,8 @@
 	<color name="gradient3">#4BC0C8</color>
 
 
+
+	<color name="material_green_a700">#00C853</color>
 	<color name="material_red_a700">#D50000</color>
 
 	<color name="material_orange_600">#FB8C00</color>
