--- a/app/src/main/res/layout/fragment_auth_registration.xml
+++ b/app/src/main/res/layout/fragment_auth_registration.xml
@@ -2,19 +2,19 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 10.12.19 22:08
+  ~ Last modified 11.12.19 22:16
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
-
+<!--	app:motionDebug="SHOW_ALL"-->
 <androidx.constraintlayout.motion.widget.MotionLayout
 	android:id="@+id/containerRegistration"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:padding="@dimen/general_margin_8"
 	android:background="@color/colorPrimaryDark"
+	android:padding="@dimen/general_margin_8"
 	app:layoutDescription="@xml/motion_registration"
 
 	xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,20 +22,39 @@
 
 	<TextView
 		android:id="@+id/tv_reg_1"
+		style="@style/medium_text_white_28sp_85op"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:lines="2"
 
+		android:lines="2"
 		android:text="Select your\ngender"
 		android:textSize="40sp"
-		style="@style/medium_text_white_28sp_85op"
 
+		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.1"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintVertical_bias="0.2"
-		app:layout_constraintHorizontal_bias="0.1"/>
+		app:layout_constraintVertical_bias="0.2" />
+
+	<TextView
+		android:id="@+id/tv_reg_2"
+		style="@style/medium_text_white_28sp_85op"
+		android:layout_width="0dp"
+
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="24dp"
+		android:alpha="0"
+		android:rotation="90"
+
+		android:text="Interested in"
+		android:textSize="40sp"
+
+		app:layout_constraintBottom_toTopOf="@id/btnGenderMale"
+		app:layout_constraintEnd_toEndOf="@id/guidelineReg2"
+		app:layout_constraintHorizontal_bias="0.1"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
 
 	<com.google.android.material.button.MaterialButton
@@ -52,13 +71,13 @@
 		app:backgroundTint="@color/colorPrimary"
 		app:icon="@drawable/ic_registration_male_64dp"
 		app:iconGravity="textStart"
-		app:rippleColor="@color/black_50"
-
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintEnd_toStartOf="@id/btnGenderFemale"
-		app:layout_constraintTop_toBottomOf="@id/tv_reg_1"
 		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintVertical_bias="0.3" />
+
+		app:layout_constraintEnd_toStartOf="@id/btnGenderFemale"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/tv_reg_1"
+		app:layout_constraintVertical_bias="0.3"
+		app:rippleColor="@color/black_50" />
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/btnGenderFemale"
@@ -71,133 +90,62 @@
 
 		app:icon="@drawable/ic_registration_female_64dp"
 		app:iconGravity="textStart"
-		app:rippleColor="@color/black_50"
-
-		app:layout_constraintStart_toEndOf="@id/btnGenderMale"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/tv_reg_1"
 		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintVertical_bias="0.3" />
-
-	<TextView
-		android:id="@+id/tv_reg_2"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-
-		android:layout_marginBottom="24dp"
-		android:text="Interested in"
-		android:textSize="40sp"
-		style="@style/medium_text_white_28sp_85op"
-
-		android:alpha="0"
-
-		app:layout_constraintBottom_toTopOf="@id/btnPrefGenderMale"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintHorizontal_bias="0.1"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
-
-
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/btnPrefGenderMale"
-		android:layout_width="0dp"
-		android:layout_height="0dp"
-		android:layout_marginBottom="@dimen/general_margin_8"
-
-		android:fontFamily="@font/rubik_medium"
-		android:text="male"
-		android:textSize="20sp"
-
-		android:scaleX="0"
-		android:scaleY="0"
-		android:rotationY="-90"
-		android:rotationX="180"
-
-		app:backgroundTint="@color/colorPrimary"
-		app:icon="@drawable/ic_registration_male_64dp"
-		app:iconGravity="textStart"
-		app:layout_constraintBottom_toTopOf="@id/btnPrefGenderFemale"
 
 		app:layout_constraintEnd_toEndOf="parent"
-
-		app:layout_constraintTop_toBottomOf="@id/tv_reg_2"
+		app:layout_constraintStart_toEndOf="@id/btnGenderMale"
+		app:layout_constraintTop_toBottomOf="@id/tv_reg_1"
+		app:layout_constraintVertical_bias="0.3"
 		app:rippleColor="@color/black_50" />
 
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/btnPrefGenderFemale"
-		android:layout_width="0dp"
-		android:layout_height="0dp"
-		android:layout_marginBottom="@dimen/general_margin_8"
-
-		android:fontFamily="@font/rubik_medium"
-		android:text="female"
-		android:textSize="20sp"
-
-		android:scaleX="0"
-		android:scaleY="0"
-		android:rotationY="-90"
-		android:rotationX="180"
-
-		app:icon="@drawable/ic_registration_female_64dp"
-		app:iconGravity="textStart"
-		app:layout_constraintBottom_toTopOf="@id/btnPrefGenderEveryone"
-
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-
-		app:rippleColor="@color/black_50" />
 
 	<com.google.android.material.button.MaterialButton
-		android:id="@+id/btnPrefGenderEveryone"
+		android:id="@+id/btnGenderEveryone"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
 		android:layout_marginBottom="24dp"
 
 		android:fontFamily="@font/rubik_medium"
 		android:text="Everyone"
-		android:textSize="20sp"
+		android:textSize="12sp"
 
-		android:scaleX="0"
-		android:scaleY="0"
-		android:rotationY="-90"
-		android:rotationX="180"
 
 		app:icon="@drawable/ic_registration_heart_64"
 		app:iconGravity="textStart"
 		app:iconTint="@color/material_red_a700"
+		app:layout_constraintBottom_toBottomOf="parent"
 
-		app:layout_constraintBottom_toTopOf="@id/btnRegistrationNext"
-
+		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/btnPrefGenderFemale"
-		app:rippleColor="@color/black_50" />
+		app:rippleColor="@color/black_50"
+
+		/>
 
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/btnRegistrationBack"
+		style="@style/Widget.MaterialComponents.Button.TextButton"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="@dimen/general_margin_16"
 
+		android:layout_marginBottom="@dimen/general_margin_16"
 		android:fontFamily="@font/rubik_medium"
 		android:text="Back"
 		android:textAllCaps="false"
 		android:textColor="@color/white_50"
-		android:textSize="18sp"
 
-		style="@style/Widget.MaterialComponents.Button.TextButton"
+		android:textSize="18sp"
 
 		app:cornerRadius="10dp"
 		app:icon="@drawable/ic_arrow_back_24dp"
-		app:iconTint="@color/white_50"
 		app:iconPadding="@dimen/general_margin_16"
-		app:rippleColor="@color/black"
-
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
+		app:iconTint="@color/white_50"
 		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintHorizontal_bias="0.1" />
 
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.1"
+		app:layout_constraintStart_toStartOf="parent"
+		app:rippleColor="@color/black" />
 
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/btnRegistrationNext"
@@ -206,12 +154,20 @@
 		android:layout_marginBottom="@dimen/general_margin_16"
 		android:src="@drawable/ic_arrow_forward_24dp"
 
-		app:backgroundTint="@color/gradient3"
-		app:rippleColor="@color/black_50"
 
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
+		app:backgroundTint="@color/gradient3"
 		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintHorizontal_bias="0.8" />
+
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.8"
+		app:layout_constraintStart_toStartOf="parent"
+		app:rippleColor="@color/black_50" />
+
+	<androidx.constraintlayout.widget.Guideline
+		android:id="@+id/guidelineReg2"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="vertical"
+		app:layout_constraintGuide_begin="5dp" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
