--- a/app/src/main/res/layout/fragment_auth_registration.xml
+++ b/app/src/main/res/layout/fragment_auth_registration.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 13.12.19 19:00
+  ~ Last modified 13.12.19 19:20
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -105,7 +105,7 @@
 		android:layout_marginBottom="24dp"
 
 		android:fontFamily="@font/rubik_medium"
-		android:text="Everyone"
+		android:text="everyone"
 		android:textSize="12sp"
 
 		app:icon="@drawable/ic_registration_heart_64"
